fix(AddressPage): Add minor fixes for dark mode [css]

--- a/client/src/app/components/stardust/Nft.scss
+++ b/client/src/app/components/stardust/Nft.scss
@@ -14,7 +14,6 @@
         height: 208px;
     }
     &__image {
-        border: 2px solid $white;
         border-radius: 8px;
         object-fit: cover;
         width: 200px;
